--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        this is the final version :)
+        
+        <meta charset="UTF-8">
+        <div class="header1"> vs code牛逼奥</div>
     </head>
 </html>
+
+<style>
+    .header1{
+        text-align: center;
+        color: red;
+    }
+</style>
