seriously what have i done ???

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <div class="header1"> vs code牛逼奥</div>
     </head>
+    <body>
+        <div class="navbar">
+            <p>nav</p>
+        </div>
+    </body>
 </html>
-
-<style>
-    .header1{
-        text-align: center;
-        color: red;
-    }
-</style>
