--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
     </head>
-    <body>
-        <div class="navbar">
-            <p>nav</p>
+    <body class="main-body">
+        <header class="top-bar">
+            <div class = "top-bar-left">CyrilKZ@THU</div>
+            <div class = "top-bar-right">
+                <a class ="top-bar-link" href = "index.html">时间轴</a>
+                <a class ="top-bar-link" href = "index.html">关于我</a>
+            </div>
+        </header>
+        <div class = "flag-pic">
+            <img id = "pic1" src="src/zhenzhaobudao.jpg" alt="异次元大门">
         </div>
+        <div class = "main-container">
+            <div class = "main-container-item1">
+                <div class="sub-container" id="the-left-one"></div>
+            </div>
+            <div class = "main-container-item2">
+                <div class="sub-container" id="the-middle-one"></div>
+            </div>
+            <div class = "main-container-item3">
+                <div class="sub-container" id="the-right-one"></div>
+            </div>
+        </div>
+        <footer class = "foot-bar">
+            <div class = "foot-note-middle">
+                <p>这个位置留给还不存在的赞助商</p>
+                <p>请不要将该页面缩放成奇怪的形状</p>
+                <p>Copyright ©2019 CyrilKZ</p>
+            </div>
+        </footer>
     </body>
+    
 </html>
