--- a/index.html
+++ b/index.html
@@ -6,28 +6,58 @@
     </head>
     <body class="main-body">
         <header class="top-bar">
-            <div class = "top-bar-left">CyrilKZ@THU</div>
-            <div class = "top-bar-right">
-                <a class ="top-bar-link" href = "index.html">时间轴</a>
-                <a class ="top-bar-link" href = "index.html">关于我</a>
+            <div class="top-bar-left">CyrilKZ@THU</div>
+            <div class="top-bar-right">
+                <a class="top-bar-link" href="index.html">时间轴</a>
+                <a class="top-bar-link" href="index.html">关于我</a>
             </div>
         </header>
-        <div class = "flag-pic">
-            <img id = "pic1" src="src/zhenzhaobudao.jpg" alt="异次元大门">
+        <div class="flag-pic">
+            <img id="pic1" src="src/zhenzhaobudao.jpg" alt="异次元大门">
         </div>
-        <div class = "main-container">
-            <div class = "main-container-item1">
-                <div class="sub-container" id="the-left-one"></div>
+        <div class="main-container">
+            <div class="main-container-item1">
+                <div class="sub-container" id="the-left-one">
+                    <div class="container-title">测试0</div>
+                    <div class="container-content">                        
+                        <p style="font-size: 20px; color: #f07c82;">Helloworld</p>
+                        <p style="font-size: 15px; color: #363433;">简介：好的它应该没有bug了。</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：没有</p>
+                    </div>
+                    <div class="container-footer" >
+                        <a class="container-link" href="index.html">查看全文</a>
+                    </div>
+                </div>
             </div>
-            <div class = "main-container-item2">
-                <div class="sub-container" id="the-middle-one"></div>
+            <div class="main-container-item2">
+                <div class="sub-container" id="the-middle-one">
+                    <div class="container-title">web前端</div>
+                    <div class="container-content">                        
+                        <p style="font-size: 20px; color: #78ac82;">web前端实训基础试验1 实验报告</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文是本次试验的实验报告，同时也是本网页的简介。</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 报告</p>
+                    </div>
+                    <div class="container-footer">
+                        <a class="container-link"  href="index.html">查看全文</a>
+                    </div>
+                </div>
             </div>
-            <div class = "main-container-item3">
-                <div class="sub-container" id="the-right-one"></div>
+            <div class="main-container-item3">
+                <div class="sub-container" id="the-right-one">
+                    <div class="container-title">随便写写</div>
+                    <div class="container-content">                        
+                        <p style="font-size: 20px; color: #66a9c9;">我对web前端实训课程的看法</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验需要的文章，提出了我对课程的一些看法。</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 看法</p>
+                    </div>
+                    <div class="container-footer">
+                        <a class="container-link"  href="index.html">查看全文</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <footer class = "foot-bar">
-            <div class = "foot-note-middle">
+        <footer class="foot-bar">
+            <div class="foot-note-middle">
                 <p>这个位置留给还不存在的赞助商</p>
                 <p>请不要将该页面缩放成奇怪的形状</p>
                 <p>Copyright ©2019 CyrilKZ</p>
