--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="top-bar-left">CyrilKZ@THU</div>
             <div class="top-bar-right">
                 <a class="top-bar-link" href="index.html">时间轴</a>
-                <a class="top-bar-link" href="index.html">关于我</a>
+                <a class="top-bar-link" href="article/00-personal-intro.html">关于我</a>
             </div>
         </header>
         <div class="flag-pic">
