--- a/article/00-personal-intro.html
+++ b/article/00-personal-intro.html
@@ -9,18 +9,37 @@
             <div class="top-bar-left">CyrilKZ@THU</div>
             <div class="top-bar-right">
                 <a class="top-bar-link" href="index.html">时间轴</a>
-                <a class="top-bar-link" href="..\index.html">回去吧</a>
+                <a class="top-bar-link" href="..\index.html">回首页</a>
             </div>
         </header>
         <div class="intro-layout">
             <div class="intro-part1">
-
+                <div class="intro-info1">
+                    <img class="realme-pic" src="..\src\realme.jpg">
+                    <p style="font-size:20px; font-weight: 600; margin-bottom: 0px;">联系此人via</p>
+                    <p>
+                        Github: <a class="contact-link" href="https://github.com/CyrilKZ">CyrilKZ</a><br>
+                        WeChat: Treker931<br>
+                        Email: thu17tht@163.com<br>
+                        Steam: 唉
+                    </p>
+                </div>
             </div>
             <div class="intro-part2">
-                
+                <div class="intro-info2">
+                    <p style="font-size:25px; font-weight: 600;">一些标签</p>
+                    <p>THT | 1999 | 汉族 | 共青团员</p>
+                    <p>四川泸州 | 云南昆明 | 北京海淀</p>
+                    <p>云大附中 | 云师大附中 | 清华大学.软件学院</p>
+                    <p>C | C++ | Python | JavaScript | Verilog | 汇编</p>
+                    <p>软件学院学生会.体育部 | 软件学院科协.赛事部</p>
+                </div>
             </div>
             <div class="intro-part3">
-                
+                <div class="intro-info2">
+                    <p style="font-size:25px; font-weight: 600;">一些成就</p>
+                    <p>这个真没有</p>
+                </div>                
             </div>
         </div>
         <footer class="foot-bar">
