--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
         <header class="top-bar">
             <div class="top-bar-left">CyrilKZ@THU</div>
             <div class="top-bar-right">
-                <a class="top-bar-link" href="index.html">时间轴</a>
-                <a class="top-bar-link" href="article/00-personal-intro.html">关于我</a>
+                <a class="top-bar-link" href="article/0-timeline.html">时间轴</a>
+                <a class="top-bar-link" href="article/0-personal-intro.html">关于我</a>
             </div>
         </header>
         <div class="flag-pic">
             <img id="pic1" src="src/zhenzhaobudao.jpg" alt="异次元大门">
+        </div>
+        <div class = title1>
+            <p>- ideas -</p>
         </div>
         <div class="main-container">
             <div class="main-container-item1">
                 <div class="sub-container" id="the-left-one">
                     <div class="container-title">测试0</div>
                     <div class="container-content">                        
-                        <p style="font-size: 20px; color: #f07c82;">Helloworld</p>
+                        <p style="font-size: 20px; color: #f07c82;">Hello World</p>
                         <p style="font-size: 15px; color: #363433;">简介：好的它应该没有bug了。</p>
                         <p style="font-size: 15px; color: #363433;">关键词：没有</p>
                     </div>
@@ -47,11 +50,11 @@
                     <div class="container-title">随便写写</div>
                     <div class="container-content">                        
                         <p style="font-size: 20px; color: #66a9c9;">我对web前端实训课程的看法</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验需要的文章，提出了我对课程的一些看法。</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验需要的文章，提出了我对课程和第一次作业的一些看法。</p>
                         <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 看法</p>
                     </div>
                     <div class="container-footer">
-                        <a class="container-link"  href="index.html">查看全文</a>
+                        <a class="container-link"  href="./article/1-thoughts-on-the-class.html">查看全文</a>
                     </div>
                 </div>
             </div>
@@ -64,5 +67,4 @@
             </div>
         </footer>
     </body>
-    
 </html>
