--- a/article/0-personal-intro.html
+++ b/article/0-personal-intro.html
@@ -8,7 +8,7 @@
         <header class="top-bar">
             <div class="top-bar-left">CyrilKZ@THU</div>
             <div class="top-bar-right">
-                <a class="top-bar-link" href="index.html">时间轴</a>
+                <a class="top-bar-link" href="0-timeline.html">时间轴</a>
                 <a class="top-bar-link" href="..\index.html">回首页</a>
             </div>
         </header>
@@ -18,17 +18,16 @@
                     <img class="realme-pic" src="..\src\realme.jpg">
                     <p style="font-size:20px; font-weight: 600; margin-bottom: 0px;">联系此人via</p>
                     <p>
-                        Github: <a class="contact-link" href="https://github.com/CyrilKZ">CyrilKZ</a><br>
-                        WeChat: Treker931<br>
-                        Email: thu17tht@163.com<br>
-                        Steam: 唉
+                        Github: <a class="contact-link" href="https://github.com/CyrilKZ" target="_blank">CyrilKZ</a><br>
+                        Email: <a class="contact-link" href="mailto:thu17tht@163.com">thu17tht@163.com</a><br>
+                        Steam: <a class="contact-link" href="https://steamcommunity.com/profiles/76561198207232861/" target="_blank">唉</a><br>
                     </p>
                 </div>
             </div>
             <div class="intro-part2">
                 <div class="intro-info2">
                     <p style="font-size:25px; font-weight: 600;">一些标签</p>
-                    <p>THT | 1999 | 汉族 | 共青团员</p>
+                    <p>THT | 1999 | 男 | 汉族 | 共青团员</p>
                     <p>四川泸州 | 云南昆明 | 北京海淀</p>
                     <p>云大附中 | 云师大附中 | 清华大学.软件学院</p>
                     <p>C | C++ | Python | JavaScript | Verilog | 汇编</p>
@@ -38,7 +37,7 @@
             <div class="intro-part3">
                 <div class="intro-info2">
                     <p style="font-size:25px; font-weight: 600;">一些成就</p>
-                    <p>这个真没有</p>
+                    <p>这个暂时真没有</p>
                 </div>                
             </div>
         </div>
@@ -49,6 +48,5 @@
                 <p>Copyright ©2019 CyrilKZ</p>
             </div>
         </footer>
-    </body>
-    
+    </body>   
 </html>
