--- a/article/0-personal-intro.html
+++ b/article/0-personal-intro.html
@@ -45,6 +45,7 @@
             <div class="foot-note-middle">
                 <p>这个位置留给还不存在的赞助商</p>
                 <p>请不要将该页面缩放成奇怪的形状</p>
+                <p>Hosted by Github Pages</p>
                 <p>Copyright ©2019 CyrilKZ</p>
             </div>
         </footer>
