--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 报告</p>
                     </div>
                     <div class="container-footer">
-                        <a class="container-link"  href="index.html">查看全文</a>
+                        <a class="container-link"  href="./article/2-web-front-exp1-report.html">查看全文</a>
                     </div>
                 </div>
             </div>
@@ -63,6 +63,7 @@
             <div class="foot-note-middle">
                 <p>这个位置留给还不存在的赞助商</p>
                 <p>请不要将该页面缩放成奇怪的形状</p>
+                <p>Hosted by Github Pages</p>
                 <p>Copyright ©2019 CyrilKZ</p>
             </div>
         </footer>
