--- a/article/0-timeline.html
+++ b/article/0-timeline.html
@@ -37,7 +37,7 @@
                   <p>【摘要】<br>本文是本次试验的实验报告，同时也是本网页的简介。</p>
                   <p>【关键词】<br>web前端实训 课程实验 报告</p>
                 </div>
-                <div class="timeline-article-footbar">创建于2019-07-02 | 最后修改于2019-07-03 | 查看全文</div>
+                <div class="timeline-article-footbar">创建于2019-07-02 | 最后修改于2019-07-03 | <a href="2-web-front-exp1-report.html" class="timeline-article-link">查看全文</a></div>
               </div>
             </div>
             <div class="timeline-article">
@@ -57,6 +57,7 @@
             <div class="foot-note-middle">
                 <p>这个位置留给还不存在的赞助商</p>
                 <p>请不要将该页面缩放成奇怪的形状</p>
+                <p>Hosted by Github Pages</p>
                 <p>Copyright ©2019 CyrilKZ</p>
             </div>
         </footer>
