--- a/article/0-timeline.html
+++ b/article/0-timeline.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>CyrilKZ@THU-timeline</title>
         <link rel="stylesheet" href="..\styles.css">
         <meta charset="UTF-8">
     </head>
