--- a/article/0-personal-intro.html
+++ b/article/0-personal-intro.html
@@ -18,11 +18,16 @@
                 <div class="intro-info1">
                     <img class="realme-pic" src="..\src\realme.jpg">
                     <p style="font-size:20px; font-weight: 600; margin-bottom: 0px;">联系此人via</p>
-                    <p>
-                        Github: <a class="contact-link" href="https://github.com/CyrilKZ" target="_blank">CyrilKZ</a><br>
-                        Email: <a class="contact-link" href="mailto:thu17tht@163.com">thu17tht@163.com</a><br>
-                        Steam: <a class="contact-link" href="https://steamcommunity.com/profiles/76561198207232861/" target="_blank">唉</a><br>
-                    </p>
+                    <div class="contact-info">
+                        <img class="logo-icon" id="logo-icon-github" src="../src/githublogo.jpg">
+                        <a class="contact-link" id="contact-via-github" href="https://github.com/CyrilKZ" target="_blank">CyrilKZ</a>
+                        <img class="logo-icon" id="logo-icon-email" src="../src/emaillogo.jpg">
+                        <a class="contact-link" id="contact-via-email" href="mailto:thu17tht@163.com" target="_blank">thu17tht@163.com</a>
+                        <img class="logo-icon" id="logo-icon-steam" src="../src/steamlogo.jpg">
+                        <a class="contact-link" id="contact-via-steam" href="https://steamcommunity.com/profiles/76561198207232861/" target="_blank">唉</a>
+                        <img class="logo-icon" id="logo-icon-alipay" src="../src/zfblogo.jpg">
+                        <a class="contact-link" id="contact-via-alipay" href="../src/payme.jpg" target="_blank">点这里打钱</a>
+                    </div>
                 </div>
             </div>
             <div class="intro-part2">
