made small changes on styles and changed main pic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
         </header>
         <div class="flag-pic">
-            <img id="pic1" src="src/zhenzhaobudao.jpg" alt="异次元大门">
+            <img id="pic1" src="src/fish.jpg" alt="异次元大门">
         </div>
         <div class = title1>
             <p>- ideas -</p>
