--- a/index.html
+++ b/index.html
@@ -22,40 +22,40 @@
         <div class="main-container">
             <div class="main-container-item1">
                 <div class="sub-container" id="the-left-one">
-                    <div class="container-title">JavaScript</div>
+                    <div class="container-title">web后端开发</div>
                     <div class="container-content">                        
-                        <p style="font-size: 20px; color: #f07c82;">JavaScript实现表达式求值</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文介绍了web前端实训课程基础实验2表达式求值题目的算法。</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：JavaScript web前端实训 表达式求值</p>
+                        <p style="font-size: 20px; color: #f07c82;">VS Code Remote使用心得</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文是我在web前端实训课程中使用vscode remote的一点感受</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：VSCodeRemote web前端实训 心得</p>
                     </div>
                     <div class="container-footer" >
-                        <a class="container-link" href="./article/3-expression-evaluation.html">查看全文</a>
+                        <a class="container-link" href="./article/4-trying-vscode-remote.html">查看全文</a>
                     </div>
                 </div>
             </div>
             <div class="main-container-item2">
                 <div class="sub-container" id="the-middle-one">
-                    <div class="container-title">web前端</div>
+                    <div class="container-title">JavaScript</div>
                     <div class="container-content">                        
-                        <p style="font-size: 20px; color: #78ac82;">web前端实训基础实验1 实验报告</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验的实验报告，同时也是本网页的简介。</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 报告</p>
+                        <p style="font-size: 20px; color: #78ac82;">JavaScript实现表达式求值</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文介绍了web前端实训课程基础实验2表达式求值题目的算法。</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：JavaScript web前端实训 表达式求值</p>
                     </div>
                     <div class="container-footer">
-                        <a class="container-link"  href="./article/2-web-front-exp1-report.html">查看全文</a>
+                        <a class="container-link"  href="./article/3-expression-evaluation.html">查看全文</a>
                     </div>
                 </div>
             </div>
             <div class="main-container-item3">
                 <div class="sub-container" id="the-right-one">
-                    <div class="container-title">随便写写</div>
+                    <div class="container-title">web前端</div>
                     <div class="container-content">                        
-                        <p style="font-size: 20px; color: #66a9c9;">我对web前端实训课程的看法</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验需要的文章，提出了我对课程和第一次作业的一些看法。</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 看法</p>
+                        <p style="font-size: 20px; color: #66a9c9;">web前端实训基础实验1 实验报告</p>
+                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验的实验报告，同时也是本网页的简介。</p>
+                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 报告</p>
                     </div>
                     <div class="container-footer">
-                        <a class="container-link"  href="./article/1-thoughts-on-the-class.html">查看全文</a>
+                        <a class="container-link"  href="./article/2-web-front-exp1-report.html">查看全文</a>
                     </div>
                 </div>
             </div>
