--- a/index.html
+++ b/index.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>CyrilKZ@THU</title>
-        <link rel="stylesheet" href="styles.css">
-        <meta charset="UTF-8">
-    </head>
-    <body class="main-body">
-        <header class="top-bar">
-            <div class="top-bar-left">CyrilKZ@THU</div>
-            <div class="top-bar-right">
-                <a class="top-bar-link" href="article/0-timeline.html">时间轴</a>
-                <a class="top-bar-link" href="article/0-personal-intro.html">关于我</a>
-            </div>
-        </header>
-        <div class="flag-pic">
-            <img id="pic1" src="src/fish.jpg" alt="异次元大门">
-        </div>
-        <div class = title1>
-            <p>- ideas -</p>
-        </div>
-        <div class="main-container">
-            <div class="main-container-item1">
-                <div class="sub-container" id="the-left-one">
-                    <div class="container-title">web后端开发</div>
-                    <div class="container-content">                        
-                        <p style="font-size: 20px; color: #f07c82;">VS Code Remote使用心得</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文是我在web前端实训课程中使用vscode remote的一点感受</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：VSCodeRemote web前端实训 心得</p>
-                    </div>
-                    <div class="container-footer" >
-                        <a class="container-link" href="./article/4-trying-vscode-remote.html">查看全文</a>
-                    </div>
-                </div>
-            </div>
-            <div class="main-container-item2">
-                <div class="sub-container" id="the-middle-one">
-                    <div class="container-title">JavaScript</div>
-                    <div class="container-content">                        
-                        <p style="font-size: 20px; color: #78ac82;">JavaScript实现表达式求值</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文介绍了web前端实训课程基础实验2表达式求值题目的算法。</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：JavaScript web前端实训 表达式求值</p>
-                    </div>
-                    <div class="container-footer">
-                        <a class="container-link"  href="./article/3-expression-evaluation.html">查看全文</a>
-                    </div>
-                </div>
-            </div>
-            <div class="main-container-item3">
-                <div class="sub-container" id="the-right-one">
-                    <div class="container-title">web前端</div>
-                    <div class="container-content">                        
-                        <p style="font-size: 20px; color: #66a9c9;">web前端实训基础实验1 实验报告</p>
-                        <p style="font-size: 15px; color: #363433;">简介：本文是本次实验的实验报告，同时也是本网页的简介。</p>
-                        <p style="font-size: 15px; color: #363433;">关键词：web前端实训 课程实验 报告</p>
-                    </div>
-                    <div class="container-footer">
-                        <a class="container-link"  href="./article/2-web-front-exp1-report.html">查看全文</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer class="foot-bar">
-            <div class="foot-note-middle">
-                <p>这个位置留给还不存在的赞助商</p>
-                <p>请不要将该页面缩放成奇怪的形状</p>
-                <p>Hosted by Github Pages</p>
-                <p>Copyright ©2019 CyrilKZ</p>
-            </div>
-        </footer>
-    </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>mainframe</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=/css/chunk-65168f69.baf7b74d.css rel=prefetch><link href=/css/chunk-68953749.f3b54348.css rel=prefetch><link href=/css/chunk-749835fa.77714e41.css rel=prefetch><link href=/css/chunk-76f1e290.fe71ac11.css rel=prefetch><link href=/css/chunk-7719e908.73f94cff.css rel=prefetch><link href=/css/chunk-771b8f0b.5451c21c.css rel=prefetch><link href=/css/chunk-773dd180.d6b92fbf.css rel=prefetch><link href=/js/chunk-1e803b30.408d3df5.js rel=prefetch><link href=/js/chunk-2d0a3b02.b3876ae6.js rel=prefetch><link href=/js/chunk-2d0c8f68.dd63d851.js rel=prefetch><link href=/js/chunk-2d0cc019.2ba80f23.js rel=prefetch><link href=/js/chunk-2d0e1741.c4166cdb.js rel=prefetch><link href=/js/chunk-2d21e972.f0a11764.js rel=prefetch><link href=/js/chunk-2d228d0c.4bbc5a0b.js rel=prefetch><link href=/js/chunk-2d22e119.81799f53.js rel=prefetch><link href=/js/chunk-65168f69.e02c7e38.js rel=prefetch><link href=/js/chunk-68953749.d5ea86b6.js rel=prefetch><link href=/js/chunk-749835fa.df87b2f9.js rel=prefetch><link href=/js/chunk-76f1e290.2eb0e715.js rel=prefetch><link href=/js/chunk-7719e908.08981dba.js rel=prefetch><link href=/js/chunk-771b8f0b.16e255ee.js rel=prefetch><link href=/js/chunk-773dd180.8748db59.js rel=prefetch><link href=/js/chunk-78a08c45.5eb37690.js rel=prefetch><link href=/js/chunk-edc1ac9e.29d81a3d.js rel=prefetch><link href=/css/chunk-vendors.27558e57.css rel=preload as=style><link href=/js/app.b3e4b015.js rel=preload as=script><link href=/js/chunk-vendors.8fdb7830.js rel=preload as=script><link href=/css/chunk-vendors.27558e57.css rel=stylesheet></head><body><noscript><strong>We're sorry but mainframe doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.8fdb7830.js></script><script src=/js/app.b3e4b015.js></script></body></html>
